--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -220,11 +220,18 @@ header{
             color: #fff;
             font-size: 90px;
             font-weight: 800;
+            @include sm-down-device(){
+                font-size: 30px;
+            }
             
             span{
                 -webkit-text-stroke: 2px #fff;
                 -webkit-text-fill-color: transparent;
                 display: block;
+                @include sm-down-device(){
+                    -webkit-text-stroke: 1px #fff;
+
+                }
             }
         }
         a.btn.hero-btn {
@@ -247,8 +254,12 @@ header{
     .social-connect {
         position: absolute;
         left: 0;
-        top: 30%;
+        top: 20%;
         transform: translateX(40%);
+        @include sm-down-device(){
+            left: -40px;
+            top: 20%;   
+        }
         ul{
             list-style: none;
             margin: 0;
@@ -275,6 +286,10 @@ header{
     padding: 130px 40px;
     position: relative;
     height: 100%;
+    @include xl-down-device(){
+        text-align: center;
+        justify-content: center;
+    }
     &.color-1{
 
     }
@@ -285,8 +300,13 @@ header{
         background: radial-gradient(50% 50% at 50% 50%, #282564 0%, #141441 100%);
     }
     &.color-4{
-        background: radial-gradient(50% 50% at 50% 50%, #FF9C00 0%, #F37700 100%);;
+        background: radial-gradient(50% 50% at 50% 50%, #FF9C00 0%, #F37700 100%);
     }
+    
+    &.color-5{
+        background: radial-gradient(50% 50% at 50% 50%, #FE8B80 0%, #F46353 100%);
+    }
+
     &:before {
         background: url(../images/shape/section-area-left-top-shape.svg);
         background-repeat: no-repeat;
@@ -296,17 +316,21 @@ header{
         inset: 0;
         // left: 0;
         // top: 0;
-        // z-index: 0;
+        z-index: -1;
     }
-    &:after {
+    &::after {
         background: url(../images/shape/section-area-right-bottom-shape.svg);
         background-repeat: no-repeat;
         position: absolute;
         content: "";
         inset: 0;
         background-position: right bottom;
+        z-index: -1;
     }
     .section-area-wrapper{
+        @include xl-down-device(){
+            max-width: 800px;
+        }
         width: 100%;
         h2.section-title{
             font-size: 90px;
@@ -315,6 +339,10 @@ header{
             color: #fff;
             text-transform: uppercase;
             font-family: $primary-font;
+            @include sm-down-device(){
+                font-size: 30px;
+                line-height: 30px;
+            }
         }
         p{
             color: #fff;
@@ -351,8 +379,16 @@ header{
         background: #26302B;
         color: #fff;
     }
+    // @include lg-down-device(){
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     justify-content: center;
+    // }
 }
 
+.section-title-area-two{
+    background: radial-gradient(50% 50% at 50% 50%, #C54BFE 0%, #9300ED 100%);
+}
 // Services Items CSS
 .service-item{
     border: 2px solid #EEEEEE;
@@ -375,21 +411,89 @@ header{
         font-family: $primary-font;
         font-size: 18px;
         font-weight: 600;
-        span{
-            // width: 30px;
-            // height: 30px;
-            // border: 2px solid;
-            // position: absolute;
-            // content: "";
-            // border-radius: 90%;
-            // /* z-index: -999; */
+        i{
+            width: 32px;
+            height: 32px;
+            border: 2px solid;
+            border-radius: 100%;
         }
     }
 }
+
+
+
+.video-pluse {
+    height: 38px;
+    width: 38px;
+    text-align: center;
+    line-height: 50px;
+    background: #fff;
+    color: var(--color-primary);
+    border-radius: 50%;
+    cursor: pointer;
+    position: absolute;
+    left: 43%;
+    top: 45%;
+    span {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: #fff;
+      border-radius: 50%;
+      display: inline-block;
+      animation: video-pulse 3s linear infinite;
+      animation-delay: calc(-0.5s * var(--i));
+      @keyframes video-pulse {
+        0% {
+          transform: scale(1);
+          opacity: 0.5;
+        }
+        100% {
+          transform: scale(2.2);
+          opacity: 0;
+        }
+      }
+    }
+    i {
+      font-size: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color:  #00152B;
+    }
+  }
 // About Us CSS
+.about-content{
+    padding-top: 150px;
+}
 .about-us-wrapper{
+    h2{
+        font-family: $primary-font;
+        font-weight: bold;
+        font-size: 40px;
+        line-height: 60px;
+        text-transform: capitalize;
+        color: #FFFFFF;
+        padding-left: 20px;
+        padding-top: 20px;
+    }
+    img{
+        padding: 0px 0px 0px 20px;
+    }
     .about-us-image {
        margin: 0px 35px;
+       position: relative;
+    //    position: relative;
+    //    &::after{
+    //        content: '';
+    //        position: absolute;
+    //        top: 0;
+    //        left: 0;
+    //        background: linear-gradient(rgba(#2A2B2F, 0.6),rgba(#2A2B2F, 0.6));
+    //    }
        img{
            margin: 0px auto;
        }
@@ -435,21 +539,83 @@ header{
         margin: 20px 0;
     }
 }
+.work-process-item1{
+   position: absolute; 
+   left: 67.1%;
+   @include xl-down-device(){
+       left: 44%;
+   }
+    .work-icon{
+        border: 2px dashed #2A2B2F;
+    padding: 15px;
+    border-radius: 90%;
+    width: 140px;
+    height: 140px;
+    display: grid;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    &::before{
+        content: "";
+        position: absolute;
+        bottom: -85px;
+        left: 0;
+        right: 0;
+        height: 80px;
+        width: 0;
+        border-right: 2px dashed #2A2B2F;
+        text-align: center;
+        margin: 0px auto;
+    }
+    span{
+        background: #fff;
+        box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.1);
+        display: block;
+        position: absolute;
+        top: 20px;
+        left: -12px;
+        padding: 8px;
+        border-radius: 90%;
+        width: 40px;
+        height: 40px;
+        font-weight: 700;
+        text-align: center;
+    }
+    h4{
+        font-size: 20px;
+        font-weight: 600;
+    }
+    svg{
+        margin: 0px auto;
+    }
+    }
+}
+
+
 .work-process-wrapper{
     position: relative;
+    @include lg-down-device(){
+        flex-wrap: wrap;
+    }
     &::before{
         content: "";
         position: absolute;
         border-top: 2px dashed #2A2B2F;
         height: 0;
+        max-width: 660px;
         width: 100%;
-        top: 0;
+        top: 218px;
+    }
+    @include xl-device(){
+        &::before{
+            max-width: 600px;
+        }
     }
     &.d-flex{
         gap: 25px;
         justify-content: center;
         margin: 30px 0;
-        padding-top: 80px;
+        padding-top: 300px;
     }
     .work-process-item{
         border: 2px dashed #2A2B2F;
@@ -505,8 +671,12 @@ header{
         display: flex;
         position: absolute;
         right: 0;
-        bottom: 0;
+        bottom: 30px;
         z-index: 999;
+        @include md-down-device(){
+            display: none;
+            visibility: hidden;
+        }
         i{
             border: 2px solid #fff;
             margin: 0 20px;
@@ -523,4 +693,194 @@ header{
             border-color: #8a8a8a;
         }
     }
+    .author-meta{
+        padding: 25px 0px 25px 0px;
+        flex-wrap: wrap;
+        .author-meta-img{
+            position: relative;
+            margin-right: 20px;
+            &::after{
+                content: '';
+                position: absolute;
+                left: 10px;
+                top: -10px;
+                border: 3px solid #fff;
+                border-radius: 100%;
+                height: 100px;
+                width: 100px;
+            }
+        }
+        .author-meta-content{
+            margin-top: 7px;
+        }
+    }
+}
+.product-item{
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box;
+    img{
+        width: 100%;
+        margin-bottom: 25px;
+    }
+    h3{
+        font-family: $primary-font;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 25px;
+        line-height: 35px;
+        display: flex;
+        justify-content: center;
+        color: #2A2B2F;
+        margin-bottom: 40px;
+        margin-bottom: 25px;
+    }
+    p{
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 20px;
+        span{
+            a{
+                font-family: $secondary-color;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 20px;
+                color: #3C3950;
+                text-decoration: none;
+                border: 1px solid #2A2B2F;
+                padding: 2px 8px;
+                border-radius: 0px 5px;
+                .bi-download{
+                    margin-right: 5px;
+                }
+                .bi-heart{
+                    margin-left: 5px;
+                }
+            }
+            .bttns{
+                margin-right: 10px;
+            }
+        }
+    }
+}
+.product-content-area{
+    padding: 157px 0px;
+}
+.clients-logo{
+    img{
+        margin-right: 20px;
+        margin-bottom: 20px;
+    }
+}
+.blog-left-wrapper{
+    .blog-left-items{
+        img{
+            width: 100%;
+        }
+        .blog-contents{
+            background: linear-gradient(rgba(#FFFFFF, 0.05));
+            box-sizing: border-box;
+            border-radius: 5px;
+            padding: 0px 30px 30px 30px;
+            h4{
+                font-family: $primary-font;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 25px;
+                line-height: 35px;
+                color: #CCCCCC;
+                padding-top: 30px;
+                margin-bottom: 20px;
+            }
+            p{
+                font-family: $secondary-font;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 30px;
+                color: #CCCCCC;
+            }
+            a{
+                font-family: $primary-font;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 18px;
+                line-height: 24px;
+                color: #FFFFFF;
+                text-decoration: none;
+                position: relative;
+                margin-left: 15px;
+                &::after{
+                    content: '';
+                    position: absolute;
+                    left: -15px;
+                    top: -3px;
+                    height: 30px;
+                    width: 30px;
+                    border: 1px solid #CCCCCC;
+                    border-radius: 100%;
+                }
+                &:hover{
+                    margin-left: 30px;
+                    &::after{
+                        display: none;
+                        visibility: hidden;
+                    }
+                    &::before{
+                        content:'\f133';
+                        position: absolute;
+                        left: -30px;
+                        top: -3px;
+                        color: #CCCCCC;
+                        font-size: 30px;
+                    }
+                }
+            }
+        }
+    }
+}
+.blog-right-content{
+    h3{
+        font-family: $primary-font;
+        font-weight: bold;
+        font-size: 40px;
+        line-height: 60px;
+        color: #FFFFFF;
+    }
+    form{
+        z-index: 11;
+        input{
+            border: 2px solid #FFFFFF;
+            box-sizing: border-box;
+            border-radius: 100px;
+            background: transparent;
+            padding: 24px;
+            max-width: 450px;
+            width: 100%;
+            &::placeholder{
+                font-family: $primary-font;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 40px;
+                color: #EEEEEE;
+            }
+        }
+        button{
+            padding: 19px 35px;
+            border: 2px solid #FFFFFF;
+            border-radius: 0px 35px 35px 0px;
+            margin-left: -35px;
+            font-family: $primary-font;
+            font-weight: bold;
+            font-size: 20px;
+            line-height: 35px;
+            text-transform: uppercase;
+            color: #5F727F;
+
+        }
+    }
+}
+.product-left-area{
+    background: #000;
 }
